<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2761"
    tools:context=".Activity.KezdolapActivity">

    <TextView
        android:id="@+id/textViewCim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Futball Bajnokság Info"
        android:textAllCaps="true"
        android:textColor="#408EC6"
        android:textColorHighlight="#CC7A2048"
        android:textColorLink="#CC7A2048"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailcim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHibaKezd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailcim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCim"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmailcim"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:background="#997A2048"
        android:ems="10"
        android:hint="@string/emailc"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="#1E2761"
        android:textColorHint="#408EC6"
        android:textColorLink="#408EC6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/editTextJelszo"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:background="#997A2048"
        android:ems="10"
        android:hint="@string/jelsz"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="#1E2761"
        android:textColorHint="#408EC6"
        android:textColorLink="#1E2761"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailcim"
        app:layout_constraintVertical_bias="0.029999971" />

    <Button
        android:id="@+id/buttonBejelentkezes"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:onClick="onClickBejelentkezes"
        android:text="@string/bejel"
        app:backgroundTint="#CC7A2048"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextJelszo"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/buttonRegisztracio"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:onClick="onClickRegisztracio"
        android:text="@string/reg"
        app:backgroundTint="#CC7A2048"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBejelentkezes"
        app:layout_constraintVertical_bias="0.029999971" />

    <Button
        android:id="@+id/buttonVendegBejelentkezes"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:onClick="onClickVendegBejelentkezes"
        android:text="@string/bejel_vendeg"
        app:backgroundTint="#CC7A2048"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisztracio"
        app:layout_constraintVertical_bias="0.029999971" />

    <ImageView
        android:id="@+id/imageViewLabda"
        android:layout_width="130dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVendegBejelentkezes"
        app:srcCompat="@drawable/foci" />

</androidx.constraintlayout.widget.ConstraintLayout>